Added Password Generator project.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Maria Cunha Portfolio</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -32,7 +32,8 @@
                 <!-- Self Photo -->
                 <div class="profile">
                     <div class="portrait-container">
-                        <img class="portrait" src="../assets/images/maria-cunha.jpeg" alt="Maria Cunha Photo">
+                        <a href="https://www.linkedin.com/in/mariabagliencunha/">      
+                            <img class="portrait" src="assets/images/maria-cunha.jpeg" alt="Maria Cunha Photo"></a>
                     </div>
                     <!-- About Paragraph -->
                     <div class="bio">
@@ -57,7 +58,7 @@
                 <!-- Refactored Code Project -->
                 <div class="primary-project-column">
                         <a href="https://mcunha17.github.io/accessibility-site-refactor/">
-                            <img class="primary-project-image" src="../assets/images/refactored-site.png" alt="Refactored Site Project Image"></a>
+                            <img class="primary-project-image" src="assets/images/refactored-site.png" alt="Refactored Site Project Image"></a>
                     <div class="primary-project-title">
                         <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h4>Refactored Code</h4></a>
                         <h5>HTML/CSS</h5>
@@ -68,10 +69,10 @@
                     <!-- Client Site App Project -->
                     <div class="card">
                         <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="../assets/images/client-site-app.jpg" alt="Client Site App Project Cover Image"></a>
+                            <img class="project-image" src="assets/images/password-generator-image.png" alt="Passenger Generator Cover Image"></a>
                         <div class="project-title">
-                            <a href="https://github.com/MCunha17"><h4>Client Site App</h4></a>
-                            <h5>APIs/JSON</h5>
+                            <a href="https://mcunha17.github.io/password-generator/"><h4>Password Generator</h4></a>
+                            <h5>HTML/CSS/JSON</h5>
                         </div>
                     </div>
                     <!-- Web App Project -->
@@ -86,7 +87,7 @@
                     <!-- EasyGo Game Project -->
                     <div class="card">
                         <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="../assets/images/easygo-game.jpg" alt="EasyGo Game Project Cover Image"></a>
+                            <img class="project-image" src="assets/images/easygo-game.jpg" alt="EasyGo Game Project Cover Image"></a>
                         <div class="project-title">
                             <a href=https://github.com/MCunha17><h4>EasyGo Game</h4></a>
                             <h5>React/NoSQL</h5>
@@ -95,7 +96,7 @@
                     <!-- Single-Page App Project -->
                     <div class="card">
                         <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="../assets/images/single-page-app.jpg" alt="Single Page App Project Cover Image"></a>
+                            <img class="project-image" src="assets/images/single-page-app.jpg" alt="Single Page App Project Cover Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h4>Single-Page App</h4></a>
                             <h5>MERN Stack</h5>
@@ -111,8 +112,8 @@
             </article>
             <article class="contact">
                 <div id="phone">312-888-6917</div>
-                <div id="email">cunha.maria.theresa@gmail.com</div>
-                <div id="git-hub"><a href="https://github.com/MCunha17">MCunha17</a></div>
+                <div id="email"><a href="emailto:cunha.maria.theresa@gmail.com">cunha.maria.theresa@gmail.com</a></div>
+                <div id="git-hub"><a href="https://github.com/MCunha17">GitHub</a></div>
             </article>
         </section>
     </main>
