--- a/index.html
+++ b/index.html
@@ -55,51 +55,51 @@
             </article>
             <!-- Top Project Photo -->
             <article class="primary-project-content">
-                <!-- Refactored Code Project -->
+                <!-- Web Application Project -->
                 <div class="primary-project-column">
-                        <a href="https://mcunha17.github.io/accessibility-site-refactor/">
-                            <img class="primary-project-image" src="assets/images/refactored-site.png" alt="Refactored Site Project Image"></a>
+                        <a href="https://github.com/annabellefosburgh/heavy-dolphin">
+                            <img class="primary-project-image" src="assets/images/web-application-app.png" alt="Thirst Trap Web Application Image"></a>
                     <div class="primary-project-title">
-                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h4>Refactored Code</h4></a>
-                        <h5>HTML/CSS</h5>
+                        <a href="https://annabellefosburgh.github.io/heavy-dolphin"><h4>Web Application: Thirst Trap</h4></a>
+                        <h5>HTML/CSS/JS/APIs</h5>
                     </div>
                 </div>
                 <!-- Bottom Project Photos -->
             <article class="secondary-project-content">
-                    <!-- Client Site App Project -->
+                    <!-- Weather Dashboard -->
                     <div class="card">
-                        <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="assets/images/password-generator-image.png" alt="Passenger Generator Cover Image"></a>
+                        <a href="https://github.com/MCunha17/city-weather-dash">
+                            <img class="project-image" src="assets/images/weather-dashboard-image.png" alt="Weather Dashboard Image"></a>
                         <div class="project-title">
-                            <a href="https://mcunha17.github.io/password-generator/"><h4>Password Generator</h4></a>
-                            <h5>HTML/CSS/JSON</h5>
+                            <a href="https://mcunha17.github.io/city-weather-dash"><h4>Weather Dashboard</h4></a>
+                            <h5>Server-Side APIs</h5>
                         </div>
                     </div>
-                    <!-- Web App Project -->
+                    <!-- Workday Scheduler -->
                     <div class="card">
-                        <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="assets/images/web-app.jpg" alt="Web App Project Cover Image"></a>
+                        <a href="https://github.com/MCunha17/work-day-scheduler">
+                            <img class="project-image" src="assets/images/workday-scheduler-image.png" alt="Workday Scheduler Image"></a>
                         <div class="project-title">
-                            <a href="https://github.com/MCunha17"><h4>Web App</h4></a>
-                            <h5>Node/IoT</h5>
+                            <a href="https://mcunha17.github.io/work-day-scheduler"><h4>Workday Scheduler</h4></a>
+                            <h5>Third-Party APIs</h5>
                         </div>
                     </div>
-                    <!-- EasyGo Game Project -->
+                    <!-- JavaScript Coding Quiz -->
                     <div class="card">
-                        <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="assets/images/easygo-game.jpg" alt="EasyGo Game Project Cover Image"></a>
+                        <a href="https://github.com/MCunha17/js-coding-quiz">
+                            <img class="project-image" src="assets/images/javascript-coding-quiz-image.png" alt="JavaScript Coding Quiz Image"></a>
                         <div class="project-title">
-                            <a href=https://github.com/MCunha17><h4>EasyGo Game</h4></a>
-                            <h5>React/NoSQL</h5>
+                            <a href=https://mcunha17.github.io/js-coding-quiz><h4>JavaScript Coding Quiz</h4></a>
+                            <h5>Web APIs</h5>
                         </div>
                     </div>
-                    <!-- Single-Page App Project -->
+                    <!-- Password Generator -->
                     <div class="card">
-                        <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="assets/images/single-page-app.jpg" alt="Single Page App Project Cover Image"></a>
+                        <a href="https://github.com/MCunha17/password-generator">
+                            <img class="project-image" src="assets/images/password-generator-image.png" alt="Password Generator Image"></a>
                         <div class="project-title">
-                            <a href="https://github.com/MCunha17"><h4>Single-Page App</h4></a>
-                            <h5>MERN Stack</h5>
+                            <a href="https://mcunha17.github.io/password-generator"><h4>Password Generator</h4></a>
+                            <h5>JavaScript</h5>
                         </div>
                     </div>
             </article>
