Added Ecopaw Tracker.

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <article class="primary-project-content">
                 <!-- Web Application Project -->
                 <div class="primary-project-column">
-                        <a href="https://github.com/annabellefosburgh/heavy-dolphin">
-                            <img class="primary-project-image" src="assets/images/web-application-app.png" alt="Thirst Trap Web Application Image"></a>
+                        <a href="https://github.com/MCunha17/ecopaw-tracker">
+                            <img class="primary-project-image" src="assets/images/ecopaw-tracker-image.png" alt="EcoPaw Tracker Web Application Image"></a>
                     <div class="primary-project-title">
-                        <a href="https://annabellefosburgh.github.io/heavy-dolphin"><h4>Web Application: Thirst Trap</h4></a>
-                        <h5>HTML/CSS/JS/APIs</h5>
+                        <a href="https://ecopaw-tracker-033283e6e802.herokuapp.com/"><h4>Full Stack Project: EcoPaw Tracker</h4></a>
+                        <h5>Node.js/Express.js/Handlebars/SQL</h5>
                     </div>
                 </div>
                 <!-- Bottom Project Photos -->
